tests/fail/invalid_args.stderr
error: expected expression, found `,`
  --> tests/fail/invalid_args.rs:10:12
   |
10 | #[decorate(test_decorator(invalid,))]
   |            ^^^^^^^^^^^^^^ expected expression
